# Document-Chat-Service

./: .env.example  .env.local.example  .gitignore  FOR-AI-CODING-AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: health.py  search_u.py
app/core/use_cases/: document_management.py
app/infrastructure/: logging.py
docs/: MacInstall.md  OWNERS-MANUAL.md
scripts/: create_venv.py  env_ops.py  install_deps.py  run_app.py  shutdown_app.py
service_scripts/: create_venv.py  install_with_venv.py  mac_system_test.sh  restart_with_venv.py  shutdown_with_venv.py  start_with_venv.py  venv_utils.py  windows_system_test.ps1
