[project]
name = "chat-with-your-documents"
version = "0.1.0"
description = "BrainDrive Chat With Your Documents project"
authors = [
    {name = "BrainDrive"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "spacy-layout (>=0.0.12,<0.0.13)",
    "pandas (>=2.3.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "posthog (>=2.4.0,<6.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
